wrap header logo with anchor and fix header's and footer's padding

--- a/css/general.css
+++ b/css/general.css
@@ -76,7 +76,7 @@ body {
   max-width: 120rem;
   margin-left: auto;
   margin-right: auto;
-  padding: 0 1.6rem;
+  padding: 0 2.4rem;
 }
 
 .grid--4-columns {
